--- a/register.css
+++ b/register.css
@@ -2,12 +2,16 @@
     display: flex;
     flex-direction: column;
     width: 60%;
+    gap: 20px;
 }
 
-form input {
-    margin-bottom: 20px;
+.register-row {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 
-form button {
+.result-container {
     margin-top: 20px;
-} 
+    font-weight: 600;
+}
