style change phone

--- a/style.css
+++ b/style.css
@@ -1491,3 +1491,9 @@ body {
   -webkit-animation-play-state: paused !important;
           animation-play-state: paused !important;
 }
+
+@media (max-width: 768px) {
+  .flowers {
+      transform: scale(1.5);
+  }
+}
