--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
   box-sizing: border-box;
 }
 
+body {
+  overflow-x: hidden; 
+  overflow-y: hidden; 
+}
+
 p {
   padding: 0;
   margin: 0;
@@ -1494,6 +1499,6 @@ body {
 
 @media (max-width: 768px) {
   .flowers {
-      transform: scale(1.5);
+      transform: scale(1.3);
   }
 }
