--- a/style.css
+++ b/style.css
@@ -6,11 +6,6 @@
   box-sizing: border-box;
 }
 
-body {
-  overflow-x: hidden; 
-  overflow-y: hidden; 
-}
-
 p {
   padding: 0;
   margin: 0;
@@ -147,7 +142,6 @@ body {
   position: relative;
   max-width: 600px;
   min-width: 300px;
-  margin: 30% 15% auto;
 }
 
 .modal-content p {
@@ -1499,6 +1493,10 @@ body {
 
 @media (max-width: 768px) {
   .flowers {
-      transform: scale(1.3);
+      transform: scale(0.7);
+  }
+
+  .modal-content {
+    margin: 30% auto;
   }
 }
