--- a/style.css
+++ b/style.css
@@ -137,6 +137,7 @@ body {
   padding: 20px;
   border: 1px solid #888;
   width: 50%;
+  height: 80vh;
   border-radius: 10px;
   text-align: center;
   position: relative;
